buildscript {
    ext.kotlin_version = '1.3.72'
    ext {
        springBootVersion = '2.3.0.RELEASE'
    }
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    
    id 'com.github.ben-manes.versions' version '0.28.0'
    id "com.gorylenko.gradle-git-properties" version "2.2.2"
    id "org.jetbrains.kotlin.plugin.spring" version "$kotlin_version"
    id "org.jetbrains.kotlin.plugin.jpa" version "$kotlin_version"
}

noArg {
    invokeInitializers = true
    annotation("net.ehicks.NoArg")
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

group 'net.ehicks'
version = '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'kotlin'
apply plugin: 'war'
apply plugin: 'idea'

java {
    sourceCompatibility = JavaVersion.VERSION_1_9
    targetCompatibility = JavaVersion.VERSION_1_9
}

repositories {
    mavenCentral()
    jcenter()
    maven { url "https://jitpack.io" }
}

ext {
    set('springBootAdminVersion', '2.2.3')
    set('springCloudVersion', "Hoxton.SR4")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'de.codecentric:spring-boot-admin-starter-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'redis.clients:jedis'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0"
    implementation 'net.sargue:java-time-jsptags:1.1.4'
    implementation 'org.apache.tika:tika-core:1.24.1'
    implementation 'commons-fileupload:commons-fileupload:1.4'
    implementation 'net.coobird:thumbnailator:0.4.11'

    implementation group: "com.github.ehicks05", name: "common", version: "-SNAPSHOT", changing: true
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation group: 'org.glassfish', name: 'javax.json', version: '1.1.4'

    implementation 'org.apache.pdfbox:pdfbox:2.0.19'
    implementation 'com.github.dhorions:boxable:1.5'

    implementation 'com.sksamuel.diff:diff:1.1.11'
    implementation 'it.sauronsoftware.cron4j:cron4j:2.2.5'
    
    implementation 'javax.websocket:javax.websocket-api:1.1'

    implementation 'javax.servlet:jstl:1.2'

    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'

    implementation 'org.postgresql:postgresql:42.2.12'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

configurations {
    compile.exclude module: "lettuce"
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}